--- a/gladwell.html
+++ b/gladwell.html
@@ -34,13 +34,14 @@
   <h2>Deliverables</h2>
   <p>Mobile-friendly website with integrated contact forms developed on Squarespace, along with a logo that clearly conveys the purpose of the school.</p>
   <br>
-  <img src="./imgs/gladwell-colours.png" alt="" class="project-img">
+  <img src="./imgs/gladwell-colours.png" alt="" class="project-img soft-border">
   <br>
   <h2>Process</h2>
-  <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. The bright colours are warm, upon Daniel's request, and the font is accessible, with a slightly handwritten slant. Both the colour scheme and the font reflect the approachable nature of the school. This instagram-esque minimalism is popular with the wellness-seeking user group.</p>
-  <p>Importantly, the website is scalable, with the possibility of adding new features based on growing user needs, such as a booking system.</p>
+  <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. This instagram-esque minimalism is popular with the wellness-seeking user group.</p>
+  <p>The bright colours are warm (inspired by prayer beads – see above), and the font has good legibility, with a slightly handwritten slant to convey the personal touch of massage therapy. So both the colour scheme and the font reflect the approachable nature of the school.</p>
+  <p>Importantly, the website is scalable, with the possibility of adding new features based on growing user needs, such as a course booking system.</p>
   <h2>Feedback</h2>
-  <p><em>"I can highly recommend Lucy for web design. She will do it quickly, conscientiously, very artistically, and make very good suggestions as to how things should be presented. Any corrections will be quickly fixed and she will not stop until everything is as you would want to to be. Her prices are very reasonable and her dedication to giving you the best exposure to the outside world is truly endearing.</br>Thank you again Lucy. I am very very pleased. Daniel."</em></p>
+  <p>"I can highly recommend Lucy for web design. She will do it quickly, conscientiously, very artistically, and make very good suggestions as to how things should be presented. Any corrections will be quickly fixed and she will not stop until everything is as you would want to to be. Her prices are very reasonable and her dedication to giving you the best exposure to the outside world is truly endearing.</br>Thank you again Lucy. I am very very pleased. Daniel."</p>
     <p><em>I'm using: pencil and paper for rapid prototyping, Squarespace for development, Photoshop for the logo.</em></p>
   </article>
   <div class="under-footer"></div>
