--- a/nourish.html
+++ b/nourish.html
@@ -39,17 +39,19 @@
     <h2>Description/Process</h2>
     <p>I researched the frustrations of the current system, spoke to patients, and tried using it myself.</p>
     <p>To make the meal-logging process more seamless, I integrated interactive elements to speed up the user's experience of logging a meal: the time of entry is autocompleted, they have the option to take a photo of their meal in place of writing a description, and there are sliding scales for inputting qualitative data, like evaluating mood. <a href="https://yvonne-liu.github.io/annafreud-app/logameal.html" target="_blank">Try it yourself</a>, if you like. Now compare Nourish with the form below!</p>
-    <img src="./imgs/eating-cbt-form.jpg" alt="" class="project-img">
+    <br>
+    <img src="./imgs/eating-cbt-form.jpg" alt="" class="project-img soft-border">
     <p>I also added a calendar interface, from which the user can access past diary entries, to show recovery progress over time.</p>
     <p>All importantly, there is the convenient option to send patient data to the therapist, so users are free to be paper-less.</p>
     <p>The aesthetic is calming and airy, influenced by the paintings of Nicholas Roreich (see below). The idea was to differentiate Nourish from other dietary apps, so that there is no hint of bodily objectification, but a gentle nudge to be mindful.</p>
-    <img src="./imgs/roreich.jpg" alt="" class="project-img">
+    <br>
+    <img src="./imgs/roreich.jpg" alt="" class="project-img soft-border">
     <h2>Outcomes</h2>
     <p>Nourish was received well by clinicans and test users who trialled the product remotely, although user testing revealed that the calendar view could be improved by making it visible alongside the food diary, to enhance usability.</p>
     <h2>Feedback</h2>
-    <p><em>"Cool! Just logged my breakfast! Super awesome. I love this idea so much!"</em></p>
-    <p><em>"I found it to be very intuitive!"</em></p>
-    <p><em>"So some feedback based on the food logs we use at the treatment center I work @ - we also use for time type/amount (I love the photo idea-we have some clients take photos of their meals/snacks outside of program!) So all that aligns with what we track."</em></p>
+    <p>"Cool! Just logged my breakfast! Super awesome. I love this idea so much!"</p>
+    <p>"I found it to be very intuitive!"</p>
+    <p>"So some feedback based on the food logs we use at the treatment center I work @ - we also use for time type/amount (I love the photo idea-we have some clients take photos of their meals/snacks outside of program!) So all that aligns with what we track." </br>– California-based Therapist.</p>
     <p><em>I used: pencil and paper, Photoshop, Illustrator, Sketch, Invision, HTML5, CSS, JavaScript.</em></p>
   </article>
   <div class="under-footer"></div>
