--- a/stopmycraving-product.html
+++ b/stopmycraving-product.html
@@ -29,14 +29,18 @@
     <p>I worked closely with the developer, CEO, and nutritionist to develop user-centered products and packaging.</p>
     <h2>Deliverables</h2>
     <p>Based on extensive research into healthy snacking trends, I co-designed a range of seven "snack boxes" that correspond to our target users. See the Valentine's Box below...</p>
+    <br>
     <img src="./imgs/valentines-box-open-tissue.png" alt="" class="project-img soft-border">
     <h2>Process</h2>
     <p>I held focus groups to verify hypotheses about who our target users are and what they need or want. The team then adopted a "beachhead" marketing strategy, i.e. winning over specific consumer groups in order to break into the mainstream.</p>
     <p>The contents of the boxes are selected from our range of snacks and drinks with the target user in mind, e.g. the Yummy Mummy box contains all organic products.</p>
     <p>In terms of packaging, I designed a solution that uses a neat and robust, recyclable box that can withstand international shipping and is cost effective. The logo and branding is added with custom-made stamps to retain a rustic yet bold look. The final result is exciting to receive and to open.</p>
-    <img src="./imgs/valentines-box-closed.png" alt="" class="project-img">
+    <br>
+    <img src="./imgs/valentines-box-closed.png" alt="" class="project-img soft-border">
     <h2>Outcomes</h2>
     <p>With its new product range, StopMyCraving has been accepted onto Europe's no.1 accelerator programme in Europe, Accelerace. The new products are now retailing on Danish department store, Moodings.</p>
+    <h2>Feedback</h2>
+    <p>"Just came from an investment meeting and it was a positive feedback on the design – "I love the packaging" :) Thought you should know. Best, Sofie"</br> – Sofie, CEO of StopMyCraving.</p>
     <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator (packaging dielines), inVision, Zeplin.</em></p>
   </article>
   <div class="under-footer"></div>
