add images to smc page

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <section class="contact" id="contact">
       <h1 id="contact-header">Contact</h1>
       <p class="contact__para">
-        I'd love to hear about your project. Please fill in the contact form below. Alternatively, send your email to: lucy.rose.sabin(a)gmail.com</p>
+        I'd love to hear about your project. Please fill in the contact form below. Alternatively, send your email to: lucy.rose.sabin @ gmail.com</p>
       <form
         role="form"
         class="form"
