--- a/stopmycraving-website.html
+++ b/stopmycraving-website.html
@@ -21,11 +21,15 @@
   </nav>
     <div class="under-nav"></div>
 
-    <iframe src="https://marvelapp.com/15cij32g?emb=1&iosapp=false&frameless=false" allowTransparency="true" frameborder="0" onload="this.width=screen.width;this.height=screen.height;" margin="1"></iframe>
+    <!-- <iframe src="https://marvelapp.com/15cij32g?emb=1&iosapp=false&frameless=false" allowTransparency="true" frameborder="0" onload="this.width=screen.width;this.height=screen.height;" margin="1"></iframe> -->
 
     <article class="project-wrapper">
 
-    <h1>StopMyCraving: E-commerce Website Design.</h1>
+    <img src="./imgs/stopmycraving-homepage.png" alt="" class="project-img soft-border">
+    <div style="height:2em;"></div>
+    <img src="./imgs/stopmycraving-blog.png" alt="" class="project-img soft-border">
+
+    <h1>StopMyCraving: E-commerce Website & Comms (Blog/Email) Design.</h1>
     <h2>Client</h2>
     <p><a href="https://stopmycraving.com/" target="_blank">StopMyCraving</a> is a food tech company that works with independent ethical producers. It has been judged a UK Top 20 startup, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a>. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings. It requires in depth knowledge of user behaviour.</p>
     <h2>Brief</h2>
