--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <section id="landing">
       <div class="under-nav"></div>
       <h1>Hi, I'm Lucy, a user-friendly designer and developer.</h1>
+      <div id="down-arrow-div">
+        <img src="./imgs/down-arrow.png" alt="scroll down arrow" id="down-arrow-pic">
+      </div>
     </section>
 
     <section id="landing-transparent">
@@ -66,9 +69,11 @@
 
     <div id="more">
       <h1 id="h1-more">Still here?</h1>
-        <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. Whilst studying Philosophy and Modern Languages (🇫🇷, 🇪🇸) at Durham University, I grew passionate about embodiment and identity theories. I see the designed world as an extension of our embodiment and identity as human beings.</p>
-        <p>At the Royal College of Art, my research involves applying principles from yoga and other embodiment practices to design processes.</p>
-        <p>Alongside practical projects, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach Vinyasa Flow Yoga in Hackney, on Thursdays and Sundays. See <a href="http://www.lucy.yoga/" target="_blank">lucy.yoga</a> to find out more.</p>
+        <p>I love to work on design projects. I love to facilitate UX workshops for professional teams who need to refocus. And I love to teach on degree level courses.</p>
+        <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. As an alumna at Durham University, my research projects centred on media, culture, and identity.</p>
+        <p>Thanks to a lot of hard work, I earned a First Class BA in Philosophy &#9878;, French 🇫🇷 and Spanish 🇪🇸 (with distinctions in both spoken languages). So I'm pretty good at critical thinking and communicating.</p>
+        <p>Now at the Royal College of Art, my Masters in Research involves rethinking design, using the practical philosophy of yoga for inspiration.</p>
+        <p>Why yoga? Well, the mind-body practice has been helping people worldwide to live <em>more consciously</em> for thousands of years. In the West we tend to emphasise the physical aspects of yoga, which is just the tip of the iceberg. As a <a href="http://lucy.yoga" target="_blank">part-time yoga teacher</a>, I believe that ethical and metaphysical aspects of yoga could inform a unique approach to interaction design that is exceptionally creative and mindful.</p>
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
