--- a/plantbox.html
+++ b/plantbox.html
@@ -30,15 +30,15 @@
 
     <h1>PlantBox: E-commerce Website Design.</h1>
     <h2>Client</h2>
-    <p><a href="https://plantbox.garden/" target="_blank">PlantBox</a> is a small and ambitious company that sells sustainable planting systems for vertical gardens.</p>
+    <p><a href="https://plantbox.garden/" target="_blank">PlantBox</a> needed an online store to sell their sustainable planting systems for vertical gardens.</p>
     <h2>Users</h2>
-    <p>Their users are urban dwellers with outdoor wall space who are keen to see more green. Landscape gardeners are already early adopters, but PlantBox would like to attract members of the public too.</p>
+    <p>Landscape gardeners are already early adopters, but PlantBox would like to attract members of the public too. In particular, they wish to target urban dwellers with outdoor wall space who are keen to see more green. </p>
     <h2>Brief</h2>
     <p>Design and develop an an e-commerce website and branding for PlantBox from scratch.</p>
     <br>
     <img src="./imgs/plantbox-account.png" alt="" class="project-img">
     <h2>Deliverables</h2>
-    <p>A responsive and scalable e-commerce website with full payment / delivery integration and customer accounts (pictured above), along with a bold logo and brand identity.</p>
+    <p>A polished, responsive and scalable e-commerce website with full payment / delivery integration and customer accounts. A bold logo and brand identity. Ongoing technical support.</p>
     <h2>Process</h2>
     <p>I included over 40 prototyped logos (from several different designers) into an online questionnaire and asked over 30 users within our target group for their opinions. The final logo was chosen and, in the process, we learned what type of brand image these users gravitate towards.</p>
     <p>I prototyped the layout of the website firstly using paper, so that I could rapidly test the information hierarchy and accessibility. I realised that it made sense to "Shop By Category", as the PlantBox flagship product comes in 3 component parts.</p>
